@@ -4,12 +4,12 @@ import com.pluralsight.courseinfo.domain.Course;
 import org.h2.jdbcx.JdbcDataSource;
 
 import javax.sql.DataSource;
-import java.sql.Connection;
-import java.sql.PreparedStatement;
-import java.sql.SQLException;
+import java.sql.*;
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
-public class CourseJdbcRepository implements CourseRepository {
+class CourseJdbcRepository implements CourseRepository {
     private static final String H2_DATABASE_URL =
             "jdbc:h2:file:%s;AUTO_SERVER=TRUE;INIT=RUNSCRIPT FROM './db_init.sql'";
 
@@ -28,8 +28,7 @@ public class CourseJdbcRepository implements CourseRepository {
 
     @Override
     public void saveCourse(Course course) {
-        try {
-            Connection connection = dataSource.getConnection();
+        try (Connection connection = dataSource.getConnection()) {
             PreparedStatement statement = connection.prepareStatement(INSERT_COURSE);
             statement.setString(1, course.id());
             statement.setString(2, course.name());
@@ -44,6 +43,20 @@ public class CourseJdbcRepository implements CourseRepository {
 
     @Override
     public List<Course> getAllCourses() {
-        return List.of();
+        try (Connection connection = dataSource.getConnection()) {
+            Statement statement = connection.createStatement();
+            ResultSet resultSet = statement.executeQuery("SELECT * FROM COURSES");
+            List<Course> courses = new ArrayList<>();
+            while(resultSet.next()) {
+                 Course course = new Course(resultSet.getString(1),
+                         resultSet.getString(2),
+                         resultSet.getLong(3),
+                         resultSet.getString(4));
+                 courses.add(course);
+            }
+            return Collections.unmodifiableList(courses);
+        } catch (SQLException e) {
+            throw new RepositoryException("Failed to retrieve courses", e);
+        }
     }
 }
